--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -13,5 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: install clj
+      run: sudo apt install clojure
     - name: Run tests
       run: clj -M:test
