--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -14,10 +14,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: install clj
-      run: sudo apt install clojure
-      # run: |
-      #   curl -L -O https://github.com/clojure/brew-install/releases/latest/download/linux-install.sh
-      #   chmod +x linux-install.sh
-      #   sudo ./linux-install.sh
+      # run: sudo apt install clojure
+      run: |
+        curl -L -O https://github.com/clojure/brew-install/releases/latest/download/linux-install.sh
+        chmod +x linux-install.sh
+        sudo ./linux-install.sh
     - name: Run tests
       run: clojure -M:test
